<resources>
    <string name="app_name">gas-station</string>
    <string name="tool_bar_extras">Extras</string>
    <string name="create_order">menu order</string>
    <string name="live_help">help</string>
    <string name="drop_extras">Extras</string>
    <string name="drop_help_center">Help Center</string>
    <string name="drop_feedback">Feedback</string>
    <string name="drop_bug">Report Bug</string>
    <string name="drop_legal">Legal</string>
    <string name="vehicle_care">VEHICLE CARE</string>
    <string name="vehicle_care_des">Access your car\'s service history, recall alerts, service reminders and more! \nPowered by CarFax</string>
    <string name="app_exc">App Exclusive</string>
    <string name="premium_extras">Premium Extras</string>
    <string name="find_gas">Find Gas</string>
    <string name="buy_car">Car Buying Service</string>
    <string name="destination">Destination</string>
    <string name="find_ride">Find a Ride</string>
    <string name="find_parking">Find Parking</string>

    <string-array name="spinner_list_item_array">
        <item>Extras</item>
        <item>Help Center</item>
        <item>Feedback</item>
        <item>Report a Bug</item>
        <item>Legal</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
