<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/live_help"
        android:title="@string/live_help"
        android:icon="@drawable/baseline_live_help_24"
        android:orderInCategory="1"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/dropdown_extras" android:title="@string/drop_extras" />
    <item android:id="@+id/dropdown_help_center" android:title="@string/drop_help_center" />
    <item android:id="@+id/dropdown_feedback" android:title="@string/drop_feedback" />
    <item android:id="@+id/dropdown_report_bug" android:title="@string/drop_bug" />
    <item android:id="@+id/dropdown_legal" android:title="@string/drop_legal" />

</menu>